diesel_compile_tests/tests/fail/exists_can_only_take_subselects.stderr
error[E0277]: the trait bound `bool: SelectQuery` is not satisfied
   --> tests/fail/exists_can_only_take_subselects.rs:26:18
    |
 LL |     users::table.filter(exists(true));
    |                  ^^^^^^ the trait `SelectQuery` is not implemented for `bool`
    |
help: the following other types implement trait `SelectQuery`
   --> DIESEL/diesel/diesel/src/query_builder/combination_clause.rs
    |
 LL | / impl<Combinator, Rule, Source, Rhs, O, LOf> SelectQuery
 LL | |     for CombinationClause<Combinator, Rule, Source, Rhs, O, LOf>
 LL | | where
 LL | |     Source: SelectQuery,
 LL | |     Rhs: SelectQuery<SqlType = Source::SqlType>,
    | |________________________________________________^ `CombinationClause<..., ..., ..., ..., ..., ...>`
    |
   ::: DIESEL/diesel/diesel/src/query_builder/select_statement/boxed.rs
    |
LL | / impl<ST, QS, DB, GB> SelectQuery for BoxedSelectStatement<'_, ST, QS, DB, GB>
LL | | where
LL | |     DB: Backend,
    | |________________^ `BoxedSelectStatement<'_, ST, QS, DB, GB>`
    |
   ::: DIESEL/diesel/diesel/src/query_builder/select_statement/mod.rs
    |
LL | / impl<F, S, D, W, O, LOf, G, H, LC> SelectQuery for SelectStatement<F, S, D, W, O, LOf, G,...
LL | | where
LL | |     S: SelectClauseExpression<F>,
LL | |     O: ValidOrderingForDistinct<D>,
    | |___________________________________^ `SelectStatement<F, S, D, W, O, LOf, G, H, LC>`
    = note: required for `diesel::expression::subselect::Subselect<bool, Bool>` to implement `diesel::Expression`
    = note: 1 redundant requirement hidden
    = note: required for `Exists<bool>` to implement `diesel::Expression`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `FilterDsl<Exists<bool>>`
 
    
error[E0277]: the trait bound `users::columns::id: SelectQuery` is not satisfied
   --> tests/fail/exists_can_only_take_subselects.rs:28:18
    |
 LL |     users::table.filter(exists(users::id));
    |                  ^^^^^^ unsatisfied trait bound
    |
help: the trait `SelectQuery` is not implemented for `users::columns::id`
   --> tests/fail/exists_can_only_take_subselects.rs:8:9
    |
  LL |         id -> Integer,
    |         ^^
help: the following other types implement trait `SelectQuery`
   --> DIESEL/diesel/diesel/src/query_builder/combination_clause.rs
    |
 LL | / impl<Combinator, Rule, Source, Rhs, O, LOf> SelectQuery
 LL | |     for CombinationClause<Combinator, Rule, Source, Rhs, O, LOf>
 LL | | where
 LL | |     Source: SelectQuery,
 LL | |     Rhs: SelectQuery<SqlType = Source::SqlType>,
    | |________________________________________________^ `CombinationClause<..., ..., ..., ..., ..., ...>`
    |
   ::: DIESEL/diesel/diesel/src/query_builder/select_statement/boxed.rs
    |
LL | / impl<ST, QS, DB, GB> SelectQuery for BoxedSelectStatement<'_, ST, QS, DB, GB>
LL | | where
LL | |     DB: Backend,
    | |________________^ `BoxedSelectStatement<'_, ST, QS, DB, GB>`
    |
   ::: DIESEL/diesel/diesel/src/query_builder/select_statement/mod.rs
    |
LL | / impl<F, S, D, W, O, LOf, G, H, LC> SelectQuery for SelectStatement<F, S, D, W, O, LOf, G,...
LL | | where
LL | |     S: SelectClauseExpression<F>,
LL | |     O: ValidOrderingForDistinct<D>,
    | |___________________________________^ `SelectStatement<F, S, D, W, O, LOf, G, H, LC>`
    = note: required for `diesel::expression::subselect::Subselect<users::columns::id, Bool>` to implement `diesel::Expression`
    = note: 1 redundant requirement hidden
    = note: required for `Exists<users::columns::id>` to implement `diesel::Expression`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `FilterDsl<Exists<users::columns::id>>`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
